@@ -711,6 +711,44 @@ bool CAppUtils::FormatTextInRichEditControl(CWnd * pWnd)
 	return bStyled;	
 }
 
+bool CAppUtils::UnderlineRegexMatches(CWnd * pWnd, const CString& matchstring)
+{
+	CString sText;
+	if (pWnd == NULL)
+		return false;
+	bool bFound = false;
+	pWnd->GetWindowText(sText);
+	// the rich edit control doesn't count the CR char!
+	// to be exact: CRLF is treated as one char.
+	sText.Replace(_T("\r"), _T(""));
+
+	try
+	{
+		const tr1::wregex regMatch(matchstring, tr1::regex_constants::icase | tr1::regex_constants::ECMAScript);
+		const tr1::wsregex_iterator end;
+		wstring s = sText;
+		for (tr1::wsregex_iterator it(s.begin(), s.end(), regMatch); it != end; ++it)
+		{
+			// (*it)[0] is the matched string
+			wstring matchedString = (*it)[0];
+			ptrdiff_t matchpos = it->position(0);
+			ATLTRACE(_T("matched id : %s\n"), (*it)[0].str().c_str());
+			CHARRANGE range = {matchpos, matchpos+(*it)[0].str().size()};
+			pWnd->SendMessage(EM_EXSETSEL, NULL, (LPARAM)&range);
+			CHARFORMAT2 format;
+			SecureZeroMemory(&format, sizeof(CHARFORMAT2));
+			format.cbSize = sizeof(CHARFORMAT2);
+			format.dwMask = CFM_LINK;
+			format.dwEffects = CFE_LINK;
+			pWnd->SendMessage(EM_SETCHARFORMAT, SCF_SELECTION, (LPARAM)&format);
+			bFound = true;
+		}
+	}
+	catch (exception) {}
+	return bFound;
+}
+
+
 bool CAppUtils::FindStyleChars(const CString& sText, TCHAR stylechar, int& start, int& end)
 {
 	int i=start;
